--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,4 +1,4 @@
-name: image-docs
+name: docs
 
 on:
   push:
@@ -9,7 +9,6 @@ on:
 
 permissions:
   contents: write
-  packages: write
 
 jobs:
   release-docs:
@@ -18,7 +17,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: fregante/setup-git-user@v2
+      - run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
       - uses: actions/setup-node@v4
         with:
           node-version: node
@@ -37,8 +38,9 @@ jobs:
           fi
         id: version
       - run: |
+          cd docs
           yarn install
-          yarn run docusaurus docs:version "${{ github.version.outputs.name }}"
+          yarn run docusaurus docs:version "${{ steps.version.outputs.name }}"
           yarn deploy
         env:
           GIT_USER: ${{ github.actor }}
